--- a/open-webui/docker-compose.yml
+++ b/open-webui/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     volumes:
       - openwebui_data:/app/backend/data
     ports:
-      - 8080:8080
+      - 8090:8080
     environment:
-      - OLLAMA_BASE_URL=http://YOUR-SERVER-IP:11434
+      - OLLAMA_BASE_URL=http://10.10.69.200:11444
       - WEBUI_SECRET_KEY=
     extra_hosts:
       - host.docker.internal:host-gateway
