--- a/open-webui/docker-compose.yml
+++ b/open-webui/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - 8090:8080
     environment:
-      - OLLAMA_BASE_URL=http://localhost:11434
+      - OLLAMA_BASE_URL=http://YOUR-SERVER-IP:11434
       - WEBUI_SECRET_KEY=
     extra_hosts:
       - host.docker.internal:host-gateway
